finish optirun support

--- a/app/settings.ejs
+++ b/app/settings.ejs
@@ -87,7 +87,7 @@
                     </label>
                 </div>
             </div>
-            <div class="settingsFieldContainer">
+            <div class="settingsFieldContainer" id="optirun">
                 <div class="settingsFieldLeft">
                     <span class="settingsFieldTitle">Lancer le processus de jeu avec optirun (Linux uniquement)</span>
                 </div>
