--- a/app/welcome.ejs
+++ b/app/welcome.ejs
@@ -5,13 +5,13 @@
     </div>-->
     <div id="welcomeContent">
         <img id="welcomeImageSeal" src="assets/images/SealCircle.png"/>
-        <span id="welcomeHeader">BIENVENUE SUR NEZOLIA</span>
-        <span id="welcomeDescription">Nezolia est un serveur PvPFac et Mini-Jeux qui vous fera redécouvrir le monde du multijoueur comme vous l'aviez connu auparavant. Avec une optimisation totale de l'infrastructure, Nezolia vous offre une expérience de jeu très attirante. Des systèmes de fams, des mods réalisés par nos soins et bien d'autres choses ! Des Mini-Jeux traditionnels et inédits ! Ces derniers sont retravaillés, améliorés pour un gameplay avec la touche Nezolia. Économie équilibrée, staff mature et à l'écoute, vous trouverez votre serveur idéal. Les suggestions apportées par les joueurs sont écoutées et rapidement implémentées sur l'infrastructure. Nous VOUS écoutons car nous souhaitons faire un serveur qui VOUS ressemble.<br><br>Se launcher est basé sur le travaille de Daniel Scalzi (<a href="https://github.com/dscalzi/HeliosLauncher">HeliosLauncher</a>)</span>
+        <span id="welcomeHeader">BIENVENUE SUR SCPWORLD</span>
+        <span id="welcomeDescription">SCPWORLD et un serveur roleplay SCP RP en cours de développement</span>
         <br>
-        <span id="welcomeDescCTA">Vous n'êtes qu'à quelques clics de Nezolia.</span>
+        <span id="welcomeDescCTA">Vous n'êtes qu'à quelques clics de SCP World.</span>
         <button id="welcomeButton">
             <div id="welcomeButtonContent">
-                CONTINUE
+                Login/connection
                 <svg id="welcomeSVG" viewBox="0 0 24.87 13.97">
                     <defs>
                         <style>.arrowLine{fill:none;stroke:#FFF;stroke-width:2px;transition: 0.25s ease;}</style>
